--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,10 @@
 {
   "rewrites": [
     {
+      "source": "/wawapi/:path*",
+      "destination": "http://196.250.202.39/wawapi/:path*"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
