--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/wawapi/:path*",
-      "destination": "http://196.250.202.39/wawapi/:path*"
+      "destination": "https://esimwawtelecom.com/wawapi/:path*"
     },
     {
       "source": "/(.*)",
