--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-# VITE_API_URL=https://esimwawtelecom.com/wawapi/public/api
+VITE_API_URL=https://esimwawtelecom.com/wawapi/api
 # VITE_API_URL=https://wawapi-production.up.railway.app
 # VITE_API_URL=https://www.wawtelecom.com/waw/public/api
-VITE_API_URL=http://localhost:8000
+# VITE_API_URL=http://localhost:8000
 FRONTEND_URL=http://localhost:3000
